--- a/Modules/reg.css
+++ b/Modules/reg.css
@@ -11,7 +11,7 @@
   }
   
   body {
-    background: url('fl.jpg') no-repeat center center/cover;
+    background: url('/images/fl.jpg') no-repeat center center/cover;
   }
 
   body::before {
@@ -32,7 +32,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 5px 15px;
-    background-color: rgba(253, 253, 253, 0.2);
+    background-color: rgba(255, 255, 255, 0.308);
     backdrop-filter: blur(15px);
     border-radius: 15px;
     margin: 15px;
@@ -57,7 +57,7 @@
   }
 
   .logo span {
-    color: rgba(3, 20, 95, 0.562);
+    color: rgb(255, 255, 255);
     font-size: .9em;
   }
   
@@ -68,6 +68,7 @@
   
   .nav-menu li {
     margin-left: 20px;
+    font-weight: bold;
   }
   
   .nav-menu li a {
@@ -79,7 +80,7 @@
   }
   
   .nav-menu li a:hover {
-    background-color: rgba(9, 28, 68, 0.562);
+    background-color: rgba(14, 123, 160, 0.644);
     transform: scale(1.05);
   }
   
