--- a/Modules/admin.css
+++ b/Modules/admin.css
@@ -1,4 +1,3 @@
-/* admin.css */
 
 body {
     margin: 0;
@@ -73,6 +72,18 @@ body {
     flex: 2;
   }
 
+  .head-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .head-info img {
+    width: 90px;
+    height: 90px;
+    margin: 20px;
+  }
+
   .nav {
     display: flex;
     justify-content: center;
@@ -82,7 +93,7 @@ body {
         linear-gradient(rgb(0,0,0,0), rgba(0, 0, 0, 0.9)), 
         url('/images/fl.jpg') no-repeat center center/cover;
     width: 98%;
-    height: 30vh;
+    height: 25vh;
   }
 
   .logo {
@@ -125,6 +136,11 @@ body {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
   }
+
+  .card a {
+    text-decoration: none;
+    color: rgba(5, 20, 37, 0.904)
+  }
   
   .card:hover {
     transform: translateY(-5px);
@@ -146,22 +162,49 @@ body {
   }
 /* Responsive: Adjust layout on tablets */
 @media (max-width: 1024px) {
+
+  .main-content {
+    margin-left: 0;
+  }
+
+    .dashboard {
+      flex-direction: column;
+    }
+
     .dashboard-container {
       flex-direction: column;
     }
   
     .sidebar {
-      width: 100%;
+      width: 90%;
       height: auto;
-      position: relative;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: space-around;
-      padding: 10px 0;
+      padding: 10px 5px;
+      position: static;
+      margin: 0;
+      border-radius: 10px;
     }
   
-    .sidebar a {
-      margin: 5px 10px;
-      font-size: 0.9em;
+    .sidebar-header,
+    .sidebar-menu {
+      flex: 1;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      text-align: center;
+      max-width: 90%;
+    }
+  
+    .sidebar-menu li {
+      margin: 0.5rem;
+      flex: 1 1 120px;
+    }
+  
+    .sidebar-menu a {
+      padding: 0.5rem 0.75rem;
+      font-size: 0.95rem;
     }
   
     .dashboard-main {
@@ -177,14 +220,20 @@ body {
   
   /* Responsive: Adjust layout on mobile phones */
   @media (max-width: 600px) {
+
+    .main-content {
+      margin-left: 0;
+    }
     .sidebar {
       flex-direction: column;
-      align-items: center;
+      margin: 0 auto;
     }
   
-    .sidebar a {
-      padding: 8px;
-      font-size: 0.85em;
+    .sidebar-menu,
+    .sidebar-header {
+      flex-direction: row;
+      align-items: center;
+      padding-left: 20px;
     }
   
     .card-grid {
