--- a/Modules/admin.css
+++ b/Modules/admin.css
@@ -11,65 +11,13 @@ body {
     min-height: 100vh;
   }
   
-  /* Sidebar */
-  .sidebar {
-    background-color: #1f2937;
-    color: #fff;
-    width: 250px;
-    padding: 2rem 1rem;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    height: 90%;
-    margin: 30px 20px 30px 20px;
-    border-radius: 20px;
-    
-  }
-  
-  .sidebar-header h2 {
-    margin-bottom: 2rem;
-    text-align: center;
-    font-size: 1.5rem;
-    color: #fff;
-  }
-  
-  .sidebar-menu {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .sidebar-menu li {
-    margin: 1rem 0;
-  }
-  
-  .sidebar-menu a {
-    color: #0d2644e1;
-    text-decoration: none;
-    background-color: white;
-    padding: 1rem;
-    font-weight: bold;
-    display: block;
-    border-radius: 8px;
-    transition: background 0.3s ease;
-  }
-  
-  .sidebar-menu a:hover {
-    background-color: #061f47a9;
-    color: white;
-  }
-  
-  .logout a {
-    color: #f87171;
-  }
-  .logout a:hover {
-    background-color: red;
-  }
   
   /* Main Content */
   .main-content {
-    margin-left: 300px;
+    margin: 20px;
     padding: 2rem;
     flex: 2;
+    transition: .3s ease-in-out;
   }
 
   .head-info {
@@ -123,7 +71,7 @@ body {
   
   .card-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 2rem;
   }
   
@@ -144,7 +92,8 @@ body {
   
   .card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 8px 30px rgb(118, 255, 248);
+    
   }
   
   .card img {
